Fixed tooltip clipping issue

--- a/src/Components/AssignmentsCard/AssignmentsCard.scss
+++ b/src/Components/AssignmentsCard/AssignmentsCard.scss
@@ -2,6 +2,7 @@
 
 .assignments-inactive {
 	pointer-events: none;
+	overflow: hidden;
 
 	.assignments-inactive-text {
 		position: absolute;
@@ -28,7 +29,7 @@
 	box-shadow: 0 0 0.5em 0em rgba($dark, 0.25);
 	&:hover { box-shadow: 0 0 0.5em 0em rgba($dark, 0.5); }
 	background-color: $light;
-	overflow: hidden;
+	// overflow: hidden;
 
 	display: flex;
 	flex-direction: column;
@@ -79,5 +80,7 @@
 		font-size: 0.9em;
 		color: $light;
 		background: $aqua-medium;
+		border-bottom-left-radius: 1em;
+		border-bottom-right-radius: 1em;
 	}
 }
